# numerical_methods

./: .clang-format  .gitignore
benchmarking1/: report.txt
benchmarking2/: ou-process.py  report.txt
benchmarking2/black-scholes/: black–scholes.hpp  main.cpp
floating-point/: floating-point.py  report.txt  results_table.txt
industrial_apps/: report.txt
log/: CMakeLists.txt  log.c  log.h  log_halley.c  log_halley.h  logf_coeffs.h  main.c  output.txt  reference.sollya  report.txt  table.c  table.h
log/scripts/: e2e_runner.py
rng/: main.cpp  pi.hpp  pi_results.txt  report.txt
rng_validation/: CMakeLists.txt  report.txt
rng_validation/include/: rng_validation.hxx
rng_validation/src/: main.cxx
rng_validation/srcipts/: plot.py
